@@ -1,0 +1,2 @@
+glide2x/h3/glide/tests/test[0-9][0-9]	usr/lib/glide2/bin/
+glide2x/cvg/bin/pass			usr/lib/glide2/bin/
